--- a/style.css
+++ b/style.css
@@ -1,2 +1,13 @@
-body
-   background-color;
+body{
+   background-color: rgb(0, 153, 255)
+}
+h1{
+text-align: center;
+font-size: 30px;
+color:blue
+}
+p{
+   text-align: justify;
+   font-size: 20px;
+   color: black;
+}
